# Trianglecalc-calc-is-slang-for-calculator-

./: CMakeLists.txt
include/: TextBox.h  Triangle.h  TriangleCalculator.h
src/: TextBox.cpp  Triangle.cpp  TriangleCalculator.cpp  main.cpp
